jena-shex/src/test/files/shexTest/negativeStructure/ExtendsNoMainShape1.shex
<http://a.example/S1> {<a> .}
<http://a.example/S2> EXTENDS @<http://a.example/S1> {<b> .} AND {<c> .} 

